--- a/fortran/Makefile
+++ b/fortran/Makefile
@@ -6,13 +6,18 @@ python:
 	f2py -m forthogonal_polynomials -c orthogonal_polynomials.pyf orthogonal_polynomials.f90
 	f2py -m fgaussian_quadrature -c gaussian_quadrature.pyf gaussian_quadrature.f90
 
-
-test:
+fortran:
 	gfortran -c orthogonal_polynomials.f90
 	gfortran -c gaussian_quadrature.f90
+	gfortran -c abstract_parameter_class.f90
 	gfortran -c normal_parameter_class.f90
 	gfortran -c uniform_parameter_class.f90
 	gfortran -c exponential_parameter_class.f90
+	gfortran -c test.f90
+	gfortran orthogonal_polynomials.o gaussian_quadrature.o \
+		abstract_parameter_class.o normal_parameter_class.o \
+		uniform_parameter_class.o exponential_parameter_class.o \
+		test.o -o a.out
 
 clean:
 	rm *.so *.pyf *.mod *.o *~
