--- a/fortran/Makefile
+++ b/fortran/Makefile
@@ -1,10 +1,12 @@
 default:
 	f2py -m forthogonal_polynomials -h orthogonal_polynomials.pyf orthogonal_polynomials.f90 --overwrite-signature
 	f2py -m fgaussian_quadrature -h gaussian_quadrature.pyf gaussian_quadrature.f90 --overwrite-signature
+	f2py -m fbasis_helper -h basis_helper.pyf basis_helper.f90 --overwrite-signature
 
 python:
 	f2py -m forthogonal_polynomials -c orthogonal_polynomials.pyf orthogonal_polynomials.f90
 	f2py -m fgaussian_quadrature -c gaussian_quadrature.pyf gaussian_quadrature.f90
+	f2py -m fbasis_helper -c basis_helper.pyf basis_helper.f90
 
 fortran:
 	gfortran -c orthogonal_polynomials.f90
