--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,13 +1,14 @@
 default:
-	g++ -Wall -fPIC -O3 -funroll-loops -c OrthogonalPolynomials.cpp
-	g++ -Wall -fPIC -O3 -funroll-loops -c GaussianQuadrature.cpp
-	g++ -Wall -fPIC -O3 -funroll-loops -c AbstractParameter.cpp
-	g++ -Wall -fPIC -O3 -funroll-loops -c NormalParameter.cpp
-	g++ -Wall -fPIC -O3 -funroll-loops -c UniformParameter.cpp
-	g++ -Wall -fPIC -O3 -funroll-loops -c ExponentialParameter.cpp
-	g++ -Wall -fPIC -O3 -funroll-loops OrthogonalPolynomials.o \
+	g++ -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c OrthogonalPolynomials.cpp
+	g++ -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c GaussianQuadrature.cpp
+	g++ -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c AbstractParameter.cpp
+	g++ -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c NormalParameter.cpp
+	g++ -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c UniformParameter.cpp
+	g++ -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c ExponentialParameter.cpp
+	g++ -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c QuadratureHelper.cpp
+	g++ -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check OrthogonalPolynomials.o \
 	GaussianQuadrature.o AbstractParameter.o NormalParameter.o UniformParameter.o \
-	ExponentialParameter.o -o a.out
+	ExponentialParameter.o QuadratureHelper.o -o a.out
 
 python:
 	python setup.py build_ext --inplace
