implementing container for parameter

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -7,9 +7,10 @@ default:
 	g++ -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c ExponentialParameter.cpp
 	g++ -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c BasisHelper.cpp
 	g++ -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c QuadratureHelper.cpp
+	g++ -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c ParameterContainer.cpp
 	g++ -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check OrthogonalPolynomials.o \
 	GaussianQuadrature.o AbstractParameter.o NormalParameter.o UniformParameter.o \
-	ExponentialParameter.o BasisHelper.o QuadratureHelper.o -o a.out
+	ExponentialParameter.o BasisHelper.o QuadratureHelper.o ParameterContainer.o -o a.out
 
 python:
 	python setup.py build_ext --inplace
