macro to avoid multiple includes, makefile changes

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -10,11 +10,22 @@ default:
 	mpicxx -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c BasisHelper.cpp
 	mpicxx -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c QuadratureHelper.cpp
 	mpicxx -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c ParameterContainer.cpp
-	mpicxx -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check ArrayList.o OrthogonalPolynomials.o \
+
+	# Create dynamic library
+	ar rcs libpspace.a  ArrayList.o OrthogonalPolynomials.o \
 	GaussianQuadrature.o AbstractParameter.o NormalParameter.o UniformParameter.o \
 	ExponentialParameter.o ParameterFactory.o \
-	BasisHelper.o QuadratureHelper.o ParameterContainer.o \
-	-o a.out
+	BasisHelper.o QuadratureHelper.o ParameterContainer.o 
+
+	# Create shared object
+	mpicxx -shared -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all --stack-check \
+	ArrayList.o OrthogonalPolynomials.o \
+	GaussianQuadrature.o AbstractParameter.o NormalParameter.o UniformParameter.o \
+	ExponentialParameter.o ParameterFactory.o \
+	BasisHelper.o QuadratureHelper.o ParameterContainer.o -o libpspace.so
+
+	# Create executable
+	mpicxx -I. -L. main.cpp -o a.out -lpspace
 
 python:
 	python setup.py build_ext --inplace
