--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -9,20 +9,23 @@ default:
 	mpicxx -Wall  -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c ParameterFactory.cpp
 	mpicxx -Wall  -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c BasisHelper.cpp
 	mpicxx -Wall  -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c QuadratureHelper.cpp
+	mpicxx -Wall  -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c TACSParameterContainer.cpp
 	mpicxx -Wall  -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c ParameterContainer.cpp
 
 	# Create dynamic library
 	ar rcs libpspace.a  ArrayList.o OrthogonalPolynomials.o \
 	GaussianQuadrature.o AbstractParameter.o NormalParameter.o UniformParameter.o \
 	ExponentialParameter.o ParameterFactory.o \
-	BasisHelper.o QuadratureHelper.o ParameterContainer.o 
+	BasisHelper.o QuadratureHelper.o \
+	TACSParameterContainer.o ParameterContainer.o 
 
 	# Create shared object
 	mpicxx -shared -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all --stack-check \
 	ArrayList.o OrthogonalPolynomials.o \
 	GaussianQuadrature.o AbstractParameter.o NormalParameter.o UniformParameter.o \
 	ExponentialParameter.o ParameterFactory.o \
-	BasisHelper.o QuadratureHelper.o ParameterContainer.o -o libpspace.so
+	BasisHelper.o QuadratureHelper.o \
+	TACSParameterContainer.o ParameterContainer.o -o libpspace.so
 
 	# Create executable
 	mpicxx -I. -L. main.cpp -o a.out -lpspace
