--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -9,7 +9,6 @@ default:
 	mpicxx -Wall  -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c ParameterFactory.cpp
 	mpicxx -Wall  -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c BasisHelper.cpp
 	mpicxx -Wall  -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c QuadratureHelper.cpp
-	mpicxx -Wall  -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c TACSParameterContainer.cpp
 	mpicxx -Wall  -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c ParameterContainer.cpp
 
 	# Create dynamic library
@@ -17,7 +16,7 @@ default:
 	GaussianQuadrature.o AbstractParameter.o NormalParameter.o UniformParameter.o \
 	ExponentialParameter.o ParameterFactory.o \
 	BasisHelper.o QuadratureHelper.o \
-	TACSParameterContainer.o ParameterContainer.o 
+	ParameterContainer.o 
 
 	# Create shared object
 	mpicxx -shared -Wall -fPIC -O3 -funroll-loops -fbounds-check -fstack-protector-all --stack-check \
@@ -25,7 +24,7 @@ default:
 	GaussianQuadrature.o AbstractParameter.o NormalParameter.o UniformParameter.o \
 	ExponentialParameter.o ParameterFactory.o \
 	BasisHelper.o QuadratureHelper.o \
-	TACSParameterContainer.o ParameterContainer.o -o libpspace.so
+	ParameterContainer.o -o libpspace.so
 
 	# Create executable
 	mpicxx -I. -L. main.cpp -o a.out -lpspace
@@ -34,4 +33,4 @@ python:
 	python setup.py build_ext --inplace
 
 clean:
-	rm *.so *.pyf *.mod *.o *~ a.out *.gch
+	rm *.so *.pyf *.mod *.o *~ a.out *.gch *.a *.so
