--- a/examples/smd/Makefile
+++ b/examples/smd/Makefile
@@ -1,11 +1,12 @@
 include ${HOME}/git/tacs/Makefile.in
 include ${HOME}/git/tacs/TACS_Common.mk
 
-OBJS = smd.o ppa.o
+OBJS = smd.o ppa.o vpl.o
 
 default: ${OBJS}
 	${CXX} -o smd smd.o ${TACS_LD_FLAGS}
 	${CXX} -o ppa ppa.o ${TACS_LD_FLAGS}
+	${CXX} -o vpl vpl.o ${TACS_LD_FLAGS}
 
 debug: TACS_CC_FLAGS=${TACS_DEBUG_CC_FLAGS}
 debug: default
@@ -22,7 +23,9 @@ clean:
 test: default
 	./smd
 	./ppa
+	./vpl
 
 test_complex: complex
 	./smd
 	./ppa
+	./vpl
