added fourbar example

--- a/examples/tacs/Makefile
+++ b/examples/tacs/Makefile
@@ -12,12 +12,13 @@ PSPACE_LIB = -L${HOME}/git/pspace/cpp/libpspace.so -lpspace
 	@echo "        --- Compiled $*.cpp successfully ---"
 	@echo
 
-OBJS = TACSStochasticElement.o smd.o vpl.o ppa.o
+OBJS = TACSStochasticElement.o smd.o vpl.o ppa.o fourbar.o
 
 default: ${OBJS}
 	${CXX} -o smd TACSStochasticElement.o smd.o ${TACS_LD_FLAGS} ${PSPACE_LIB}
 	${CXX} -o vpl TACSStochasticElement.o vpl.o ${TACS_LD_FLAGS} ${PSPACE_LIB}
 	${CXX} -o ppa TACSStochasticElement.o ppa.o ${TACS_LD_FLAGS} ${PSPACE_LIB}
+	${CXX} -o fourbar TACSStochasticElement.o fourbar.o ${TACS_LD_FLAGS} ${PSPACE_LIB}
 
 debug: TACS_CC_FLAGS=${TACS_DEBUG_CC_FLAGS}
 debug: default
@@ -29,7 +30,7 @@ complex_debug: TACS_DEF="-DTACS_USE_COMPLEX"
 complex_debug: debug
 
 clean:
-	rm -f *.o smd ppa 
+	rm -f *.o smd ppa vpl fourbar
 
 test: default
 	./smd
