complexified entire library

--- a/examples/tacs/Makefile
+++ b/examples/tacs/Makefile
@@ -18,18 +18,14 @@ library: ${OBJS}
 	ar rcs libtacsuq.a  TACSStochasticElement.o TACSKSFunction.o TACSStochasticFunction.o TACSStochasticVarianceFunction.o TACSStochasticFMeanFunction.o TACSStochasticFFMeanFunction.o TACSKSStochasticFMeanFunction.o TACSKSStochasticFFMeanFunction.o TACSKineticEnergy.o TACSPotentialEnergy.o TACSDisplacement.o TACSVelocity.o TACSKSStochasticFunction.o
 
 default: ${OBJS}
-	${CXX} -o smd TACSStochasticElement.o TACSKSFunction.o 	TACSStochasticFunction.o TACSKineticEnergy.o TACSPotentialEnergy.o TACSDisplacement.o TACSVelocity.o TACSKSStochasticFunction.o smd.o ${TACS_LD_FLAGS} ${PSPACE_LIB}
-	${CXX} -o vpl TACSStochasticElement.o vpl.o ${TACS_LD_FLAGS} ${PSPACE_LIB}
-	${CXX} -o ppa TACSStochasticElement.o ppa.o ${TACS_LD_FLAGS} ${PSPACE_LIB}
-	${CXX} -o fourbar TACSStochasticElement.o fourbar.o ${TACS_LD_FLAGS} ${PSPACE_LIB}
 
 debug: TACS_CC_FLAGS=${TACS_DEBUG_CC_FLAGS}
 debug: default
 
-complex: TACS_DEF="-DTACS_USE_COMPLEX"
-complex: default
+complex: TACS_DEF=-DTACS_USE_COMPLEX -DUSE_COMPLEX
+complex: default library
 
-complex_debug: TACS_DEF="-DTACS_USE_COMPLEX"
+complex_debug: TACS_DEF=-DTACS_USE_COMPLEX -DUSE_COMPLEX
 complex_debug: debug
 
 clean:
