--- a/examples/tacs/spring-mass-damper/Makefile
+++ b/examples/tacs/spring-mass-damper/Makefile
@@ -25,10 +25,10 @@ default: ${OBJS}
 debug: TACS_CC_FLAGS=${TACS_DEBUG_CC_FLAGS}
 debug: default
 
-complex: TACS_DEF="-DTACS_USE_COMPLEX"
+complex: TACS_DEF=-DTACS_USE_COMPLEX -DUSE_COMPLEX
 complex: default
 
-complex_debug: TACS_DEF="-DTACS_USE_COMPLEX"
+complex_debug: TACS_DEF=-DTACS_USE_COMPLEX -DUSE_COMPLEX
 complex_debug: debug
 
 clean:
