setup samping test case

--- a/examples/tacs/fourbar/Makefile
+++ b/examples/tacs/fourbar/Makefile
@@ -15,10 +15,11 @@ PSPACE_TACS_LIB = ${HOME}/git/pspace/examples/tacs/libtacsuq.a
 	@echo "        --- Compiled $*.cpp successfully ---"
 	@echo
 
-OBJS =  fourbar.o sampling.o
+OBJS =  deterministic.o projection.o sampling.o
 
 default: ${OBJS}
-	${CXX} -o fourbar fourbar.o  ${TACS_LD_FLAGS} ${PSPACE_LIB} ${PSPACE_TACS_LIB}
+	${CXX} -o deterministic deterministic.o  ${TACS_LD_FLAGS} ${PSPACE_LIB} ${PSPACE_TACS_LIB}	
+	${CXX} -o projection projection.o  ${TACS_LD_FLAGS} ${PSPACE_LIB} ${PSPACE_TACS_LIB}
 	${CXX} -o sampling sampling.o  ${TACS_LD_FLAGS} ${PSPACE_LIB} ${PSPACE_TACS_LIB}
 
 debug: TACS_CC_FLAGS=${TACS_DEBUG_CC_FLAGS}
