unified ks function logic

--- a/examples/tacs/Makefile
+++ b/examples/tacs/Makefile
@@ -12,10 +12,10 @@ PSPACE_LIB = ${HOME}/git/pspace/cpp/libpspace.a
 	@echo "        --- Compiled $*.cpp successfully ---"
 	@echo
 
-OBJS = TACSStochasticElement.o TACSKSFunction.o TACSStochasticFunction.o TACSStochasticVarianceFunction.o TACSStochasticFMeanFunction.o TACSKSStochasticFMeanBeamFunction.o TACSKSStochasticFFMeanBeamFunction.o TACSStochasticFFMeanFunction.o TACSKSStochasticFMeanFunction.o TACSKSStochasticFFMeanFunction.o TACSKineticEnergy.o TACSPotentialEnergy.o TACSDisplacement.o TACSVelocity.o TACSKSStochasticFunction.o 
+OBJS = TACSStochasticElement.o TACSKSFunction.o TACSStochasticFunction.o TACSStochasticVarianceFunction.o TACSStochasticFMeanFunction.o TACSStochasticFFMeanFunction.o TACSKSStochasticFMeanFunction.o TACSKSStochasticFFMeanFunction.o TACSKineticEnergy.o TACSPotentialEnergy.o TACSDisplacement.o TACSVelocity.o TACSKSStochasticFunction.o 
 
 library: ${OBJS}
-	ar rcs libtacsuq.a  TACSStochasticElement.o TACSKSFunction.o TACSStochasticFunction.o TACSStochasticVarianceFunction.o TACSStochasticFMeanFunction.o TACSKSStochasticFMeanBeamFunction.o TACSKSStochasticFFMeanBeamFunction.o TACSStochasticFFMeanFunction.o TACSKSStochasticFMeanFunction.o TACSKSStochasticFFMeanFunction.o TACSKineticEnergy.o TACSPotentialEnergy.o TACSDisplacement.o TACSVelocity.o TACSKSStochasticFunction.o
+	ar rcs libtacsuq.a  TACSStochasticElement.o TACSKSFunction.o TACSStochasticFunction.o TACSStochasticVarianceFunction.o TACSStochasticFMeanFunction.o TACSStochasticFFMeanFunction.o TACSKSStochasticFMeanFunction.o TACSKSStochasticFFMeanFunction.o TACSKineticEnergy.o TACSPotentialEnergy.o TACSDisplacement.o TACSVelocity.o TACSKSStochasticFunction.o
 
 default: ${OBJS}
 
