--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,17 +1,17 @@
-CFLAGS = -Wall -fPIC -g -DUSE_COMPLEX
+CFLAGS = -O3 -fPIC #Wall -fPIC -g -DUSE_COMPLEX
 
 default:
-	mpicxx ${CFLAGS} -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c ArrayList.cpp
-	mpicxx ${CFLAGS} -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c OrthogonalPolynomials.cpp
-	mpicxx ${CFLAGS} -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c GaussianQuadrature.cpp
-	mpicxx ${CFLAGS} -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c AbstractParameter.cpp
-	mpicxx ${CFLAGS} -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c NormalParameter.cpp
-	mpicxx ${CFLAGS} -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c UniformParameter.cpp
-	mpicxx ${CFLAGS} -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c ExponentialParameter.cpp
-	mpicxx ${CFLAGS} -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c ParameterFactory.cpp
-	mpicxx ${CFLAGS} -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c BasisHelper.cpp
-	mpicxx ${CFLAGS} -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c QuadratureHelper.cpp
-	mpicxx ${CFLAGS} -funroll-loops -fbounds-check -fstack-protector-all  --stack-check -c ParameterContainer.cpp
+	mpicxx ${CFLAGS} -funroll-loops -c ArrayList.cpp
+	mpicxx ${CFLAGS} -funroll-loops -c OrthogonalPolynomials.cpp
+	mpicxx ${CFLAGS} -funroll-loops -c GaussianQuadrature.cpp
+	mpicxx ${CFLAGS} -funroll-loops -c AbstractParameter.cpp
+	mpicxx ${CFLAGS} -funroll-loops -c NormalParameter.cpp
+	mpicxx ${CFLAGS} -funroll-loops -c UniformParameter.cpp
+	mpicxx ${CFLAGS} -funroll-loops -c ExponentialParameter.cpp
+	mpicxx ${CFLAGS} -funroll-loops -c ParameterFactory.cpp
+	mpicxx ${CFLAGS} -funroll-loops -c BasisHelper.cpp
+	mpicxx ${CFLAGS} -funroll-loops -c QuadratureHelper.cpp
+	mpicxx ${CFLAGS} -funroll-loops -c ParameterContainer.cpp
 
 	# Create dynamic library
 	ar rcs libpspace.a  ArrayList.o OrthogonalPolynomials.o \
