--- a/examples/tacs/fourbar/Makefile
+++ b/examples/tacs/fourbar/Makefile
@@ -21,12 +21,13 @@ IPOPT_LD_FLAGS = -Wl,--rpath -Wl,${HOME}/git/ipopt/build/lib
 	@echo "        --- Compiled $*.cpp successfully ---"
 	@echo
 
-OBJS =  MyNLP.o deterministic.o projection.o sampling.o
+OBJS =  deterministic.o projection.o sampling.o # DetOpt.o
 
 default: ${OBJS}
-	${CXX} -o deterministic MyNLP.o deterministic.o ${TACS_LD_FLAGS} ${PSPACE_LIB} ${PSPACE_TACS_LIB} ${IPOPT_LIB} ${IPOPT_LD_FLAGS}
-	${CXX} -o projection projection.o ${TACS_LD_FLAGS} ${PSPACE_LIB} ${PSPACE_TACS_LIB} ${IPOPT_LIB}
-	${CXX} -o sampling sampling.o ${TACS_LD_FLAGS} ${PSPACE_LIB} ${PSPACE_TACS_LIB} ${IPOPT_LIB}
+	${CXX} -o deterministic deterministic.o ${TACS_LD_FLAGS} ${PSPACE_LIB} ${PSPACE_TACS_LIB} 
+	${CXX} -o projection projection.o ${TACS_LD_FLAGS} ${PSPACE_LIB} ${PSPACE_TACS_LIB} 
+	${CXX} -o sampling sampling.o ${TACS_LD_FLAGS} ${PSPACE_LIB} ${PSPACE_TACS_LIB}
+	#${CXX} -o detopt deterministic.o DetOpt.o ${TACS_LD_FLAGS} ${PSPACE_LIB} ${PSPACE_TACS_LIB} ${IPOPT_LIB} ${IPOPT_LD_FLAGS}
 
 debug: TACS_CC_FLAGS=${TACS_DEBUG_CC_FLAGS}
 debug: default
