trying out mutable element

--- a/examples/stacs/cpp/Makefile
+++ b/examples/stacs/cpp/Makefile
@@ -1,13 +1,16 @@
 include ${HOME}/git/tacs/Makefile.in
 include ${HOME}/git/tacs/TACS_Common.mk
 
+include ${HOME}/git/tmr/Makefile.in
+include ${HOME}/git/tmr/TMR_Common.mk
+
 PSPACE_INCLUDE = -I${HOME}/git/pspace/cpp/ -I/usr/include/python2.7
 PSPACE_LIB = ${HOME}/git/pspace/cpp/libpspace.a
 
 # This is the one rule that is used to compile all the
 # source code in STACS
 %.o: %.cpp
-	${CXX} ${TACS_CC_FLAGS} ${PSPACE_INCLUDE} -c $< -o $*.o
+	${CXX} ${TACS_CC_FLAGS} ${TMR_CC_FLAGS} ${PSPACE_INCLUDE} -c $< -o $*.o
 	@echo
 	@echo "        --- Compiled $*.cpp successfully ---"
 	@echo
@@ -16,11 +19,12 @@ OBJS = TACSStochasticElement.o TACSKSFunction.o TACSStochasticFunction.o \
 TACSStochasticVarianceFunction.o TACSStochasticFMeanFunction.o \
 TACSStochasticFFMeanFunction.o TACSKSStochasticFMeanFunction.o \
 TACSKSStochasticFFMeanFunction.o TACSKineticEnergy.o TACSPotentialEnergy.o \
-TACSDisplacement.o TACSVelocity.o TACSKSStochasticFunction.o smd.o
+TACSDisplacement.o TACSVelocity.o TACSKSStochasticFunction.o smd.o \
+TACSMutableElement3D.o
 
 library: ${OBJS}
 	ar rcs libstacs.a ${OBJS}
-	mpicxx -shared ${TACS_CC_FLAGS} ${OBJS} -o libstacs.so
+	mpicxx -shared ${TACS_CC_FLAGS} ${TMR_CC_FLAGS} ${OBJS} -o libstacs.so
 
 default: ${OBJS}
 
