--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
-language: python
-python:
-  - "2.7"
-  
+language: c++
+
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
-  - python setup.py build_ext --inplace
+  - cd cpp
   
 # command to run tests
 script:
+  ./a.out
